tests/ui/bad-extra-fields.stderr
error: BoolEnum can only be used on enums with two variants named No and Yes, or False and True.

  = help: try `enum ExtraFields { No, Yes }`

 --> $DIR/bad-extra-fields.rs:4:10
  |
4 | pub enum ExtraFields {
  |          ^^^^^^^^^^^
