tests/ui/bad-extra-fields.rs
use boolenum::BoolEnum;

#[derive(BoolEnum)]
pub enum ExtraFields {
    Yes,
    No,
    FileNotFound,
}

fn main() {}
